--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -96,28 +96,32 @@
     .enter-button {
         width: 100%;
         height: 50px;
-        box-shadow: 3px 3px black;
-        margin-bottom: 8px;
+        box-shadow: 3px 3px #fdcd92;
+        margin-bottom: 32px;
         margin-top: 8px;
         border-radius: 6px;
         background-color: #fde6ca;
+        font-size: 1rem;
     }
 
-    .print-button {
-        width: 100%;
-        height: 50px;
-        box-shadow: 3px 3px black;
-        margin-bottom: 32px;
-        border-radius: 6px;
-        background-color: #fde6ca;
-    }
-
-    .blank-button {
-        width: 100%;
-        height: 50px;
-        box-shadow: 3px 3px #fde6ca;
-        margin-bottom: 32px;
-        border-radius: 6px;
-        background-color: #faf1e6;
+    .tool-view {
+        margin-bottom: 16px;
+        display: flex;
+        justify-content: start;
+        .tool-button {
+            width: 70px;
+            height: 50px;
+            box-shadow: 3px 3px #fde6ca;
+            border-radius: 6px;
+            background-color: #faf1e6;
+            margin-left: 8px;
+        }
+        .begin {
+            margin-left: 0px;
+        }
+        .important {
+            background-color: #fde6ca;
+            box-shadow: 3px 3px #fdcd92;
+        }
     }
 }
